crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__child_needs_you_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> have it reviewed                                                              "
"                                                                                "
"⏺ reviewer(review the diff)                                                     "
"  ⎿  Needs you                                                                  "
"1 running · 1 needs you                                                         "
"Edit · reviewer                                                                 "
"                                                                                "
"Do you want to edit src/lib.rs?                                                 "
"❯ 1. Yes                                                                        "
"  2. Yes, allow Edit(src/) during this session                                  "
"  3. No, and tell bingo what to do differently (esc)                            "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts · / commands · ! shell                                    fake-1"
