crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__child_transcript_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"⏺ Read(src/lib.rs)                                                                                                      "
"  ⎿  Read 3 lines                                                                                                       "
"                                                                                                                        "
"⏺ Read(src/lib.rs)                                                                                                      "
"  ⎿  Read 3 lines                                                                                                       "
"                                                                                                                        "
"⏺ Read(src/lib.rs)                                                                                                      "
"  ⎿  Read 3 lines                                                                                                       "
"                                                                                                                        "
"> review the diff                                                                                                       "
"                                                                                                                        "
"⏺ Two nits, otherwise fine.                                                                                             "
"✻ Rummaging… (esc to interrupt · 1s)                                                                                    "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                                                     in reviewer · fake-1"
