crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__child_transcript_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"⏺ Read(src/lib.rs)                                                              "
"  ⎿  Read 3 lines                                                               "
"                                                                                "
"⏺ Read(src/lib.rs)                                                              "
"  ⎿  Read 3 lines                                                               "
"                                                                                "
"⏺ Read(src/lib.rs)                                                              "
"  ⎿  Read 3 lines                                                               "
"                                                                                "
"> review the diff                                                               "
"                                                                                "
"⏺ Two nits, otherwise fine.                                                     "
"✻ Working… (esc to interrupt · 0s)                                              "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                             in reviewer · fake-1"
