crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__code_block_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                                                                  │"
"│                                                                                                                      │"
"│   /help for help · /login codex to use a subscription                                                                │"
"│   cwd: /tmp/project                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                                        "
"> show me the draw function                                                                                             "
"                                                                                                                        "
"⏺ Here it is:                                                                                                           "
"                                                                                                                        "
"      rust                                                                                                              "
"      // the frame, once                                                                                                "
"      pub fn draw(now: Now) -> bool {                                                                                   "
"          let ready = true;                                                                                             "
"          ready && now.motion                                                                                           "
"      }                                                                                                                 "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                                                              fake/fake-1"
